--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "a redux diary",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "brown",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "redux": "^5.0.1"
+  }
 }
