--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "brown",
   "license": "ISC",
   "dependencies": {
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6"
   }
 }
